--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
       <option value="admin">Admin</option>
     </select>
     
-    <button type="submit">Login</button>
+    <button (click)="login()" type="submit">Login</button>
   </form>
   
   <p>Don't have an account?</p>
