--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -18,6 +18,6 @@
       <option value="admin">Admin</option>
     </select>
     
-    <button type="submit" >Sign Up</button>
+    <button type="submit" (click)="register()">Sign Up</button>
   </form>
 </div>
